fix piano spacing

--- a/src/assets/css/_globals.scss
+++ b/src/assets/css/_globals.scss
@@ -3,3 +3,5 @@ $darker-purple: #691048;
 $medium-purple: #b23882;
 $pink: #b23882;
 $light-pink: #f2a2d4;
+
+$accidental-width: .75em;
